--- a/mosquitto/config.yaml
+++ b/mosquitto/config.yaml
@@ -1,5 +1,5 @@
 ---
-version: manifest-aarch64
+version: 6.3.1
 slug: mosquitto-test
 name: Mosquitto broker (test)
 description: An Open Source MQTT broker
