--- a/mosquitto/config.yaml
+++ b/mosquitto/config.yaml
@@ -1,7 +1,7 @@
 ---
-version: 6.3.1
-slug: mosquitto-test
-name: Mosquitto broker (test)
+version: 0.0.1
+slug: mosquitto-custom-build
+name: Mosquitto broker (custom build)
 description: An Open Source MQTT broker
 url: https://github.com/Skapershik/tree/main/mosquitto
 codenotary: notary@home-assistant.io
@@ -14,12 +14,13 @@ arch:
 auth_api: true
 discovery:
   - mqtt
-image: skapershik/test
+image: skapershik/custom-build-{arch}
 map:
   - ssl
   - share
 options:
   logins: []
+  anonymous: false
   require_certificate: false
   certfile: fullchain.pem
   keyfile: privkey.pem
@@ -36,6 +37,7 @@ schema:
     - username: str
       password: password
       password_pre_hashed: "bool?"
+  anonymous: bool
   require_certificate: bool
   certfile: str
   cafile: str?
